tests/fixtures/invalid/none_bitor_dict.py
# Cannot bitwise OR None and Dict[str, int]
x: None = None | {"a": 1}
